Removed deprecated use of Double constructor and replaced with valueOf